fixed spacing and sizing

--- a/src/components/pages/Home/home.css
+++ b/src/components/pages/Home/home.css
@@ -9,7 +9,8 @@
   font-size: 8rem;
   position: relative;
   margin-top: 7rem;
-  right: 5rem;
+  top: 15rem;
+  right: 2rem;
   padding: 0;
   line-height: 70px;
   letter-spacing: 5px;
@@ -21,7 +22,8 @@
   font-size: 8rem;
   line-height: 105px;
   letter-spacing: 9px;
-  right: 5rem;
+  top: 15rem;
+  right: 2rem;
   margin: 0;
   padding-top: 0;
   background: -webkit-linear-gradient(#3d3d84 35%, black);
@@ -30,15 +32,8 @@
 }
 
 .trans {
-  min-height: 100%;
-  min-width: 1024px;
-
-  /* Set up proportionate scaling */
-  width: 100%;
-  height: auto;
-
-  /* Set up positioning */
-position: fixed;
-left: 0;
-top: 0;
+  object-fit: cover;
+  width: 120rem;
+  position: relative;
+  right: 10rem;
 }
